--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -5,6 +5,14 @@
   "header-blog": "БЛОГ",
   "header-community": "КОМЬЮНИТИ",
 
+  "main-description": "Привет! Рад видеть вас на моем сайте нескучного коучинга. Здесь вы найдете полезную информацию по развитию своих профессиональных навыков и площадку единомышленников, работающих на удаленке.",
+  "main-li-1": "Эффективность руководителя",
+  "main-li-2": "Управление командой",
+  "main-li-3": "Распределённая команда",
+  "main-li-4": "Удалённая работа",
+  "main-li-5": "Управление рисками",
+  "main-li-6": "Нелинейное планирование",
+
   "about-title": "Георгий Ламберт",
   "about-subheading": "Профессиональный ментор руководителей и специалистов среднего звена",
   "about-description": "Так сложилось, что я втянулся в дистанционную работу ещё до времён, когда стало популярным само слово «удалёнка», уже несколько лет создаю комфортные условия для работы распределенной команды и десятков тысяч удалёнщиков",
@@ -26,7 +34,27 @@
   "about-cards-text-3-li-3": "самому выбирать где, когда и сколько работать — в кайф",
   "about-button-3": "Смотреть кейсы",
 
-  "services": " тут текст!!!!",
+  "services-title": "Чем я могу быть полезен",
+  "services-placeholder-name": "Ваше имя",
+  "services-placeholder-email": "Ваш Электронный адрес",
+  "services-placeholder-message": "Введите ваше обращение",
+  "services-button": "Отправить",
+  "services-policy": "нажимая на кнопку, вы соглашаетесь с Политикой обработки персональных данных",
+  "services-li-1": " Эффективность руководителя",
+  "services-li-1-1": "(HR трансформация)",
+  "services-li-2": "Управление командой",
+  "services-li-2-1": "(HR процессы)",
+  "services-li-3": "Распределённая команда",
+  "services-li-4": "Удалённая работа",
+  "services-li-4-1": "(HR метрики)",
+  "services-li-5": "Управление рисками",
+  "services-li-6": "Нелинейное планирование",
+
+  "practice-title": "Кейсы из практики",
+
+  "not-found-title": "Такой страницы не существует.",
+  "not-found-button": "Вернуться на главную",
+
   "practice": " тут текст!!!!",
   "blog-title": "Авторский блог",
   "community": " тут текст!!!!"
