loader and localization were added

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -24,7 +24,7 @@
   "about-cards-text-2-li-1": "HR CPO | Crowd",
   "about-cards-text-2-li-2": "Remote Employees Lifecycle | Yandex",
   "about-cards-text-2-li-3": "HR PO Lecturer | HR-kafedra",
-  "about-cards-text-li-4": "Ex Yandex SMM-support & InterCom",
+  "about-cards-text-2-li-4": "Ex Yandex SMM-support & InterCom",
   "about-input-2": "Ваш email для рассылки",
   "about-button-2": "Подписаться",
   "about-cards-title-3": " Реальные результаты",
