--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -42,16 +42,19 @@
   "services-placeholder-email": "Email address",
   "services-placeholder-message": "Enter your message",
   "services-button": "Send",
-  "services-policy": "by clicking on the button, you agree to the Personal Data Processing Policy",
+  "services-policy": "by clicking on the button, you agree to the ",
+  "services-policy-a": "Personal Data Processing Policy",
   "services-li-1": "Executive Effectiveness ",
-  "services-li-1-1": "(HR transformation)",
+  "services-li-1-1": "HR transformation",
   "services-li-2": "Team Management ",
-  "services-li-2-1": "(HR processes)",
+  "services-li-2-1": "HR processes",
   "services-li-3": "Distributed team",
   "services-li-4": "Remote work ",
-  "services-li-4-1": "(HR metrics)",
+  "services-li-4-1": "HR metrics",
   "services-li-5": "Risk management",
   "services-li-6": "Non-linear planning",
+  "services-error-name": "Please enter only letters and spaces",
+  "services-error-email": "Please enter a valid email",
 
   "not-found-title": "There is no such page.",
   "not-found-button": "Go back to the main page",
