--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -39,16 +39,19 @@
   "services-placeholder-email": "Ваш Электронный адрес",
   "services-placeholder-message": "Введите ваше обращение",
   "services-button": "Отправить",
-  "services-policy": "нажимая на кнопку, вы соглашаетесь с Политикой обработки персональных данных",
+  "services-policy": "нажимая на кнопку, вы соглашаетесь с ",
+  "services-policy-a": "Политикой обработки  персональных данных",
   "services-li-1": " Эффективность руководителя",
-  "services-li-1-1": "(HR трансформация)",
+  "services-li-1-1": "HR трансформация",
   "services-li-2": "Управление командой",
-  "services-li-2-1": "(HR процессы)",
+  "services-li-2-1": "HR процессы",
   "services-li-3": "Распределённая команда",
   "services-li-4": "Удалённая работа",
-  "services-li-4-1": "(HR метрики)",
+  "services-li-4-1": "HR метрики",
   "services-li-5": "Управление рисками",
   "services-li-6": "Нелинейное планирование",
+  "services-error-name": "Пожалуйста, введите только буквы и пробелы",
+  "services-error-email": "Введите корректный email",
 
   "practice-title": "Кейсы из практики",
 
