--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -58,7 +58,11 @@
   "not-found-title": "Такой страницы не существует.",
   "not-found-button": "Вернуться на главную",
 
-  "practice": " тут текст!!!!",
   "blog-title": "Авторский блог",
-  "community": " тут текст!!!!"
+
+  "community-title": "Ламы на удаленке",
+  "community-text": "Приглашаю вас присоединиться к нашему уютному сообществу экспертов-удаленщиков и просто хороших людей, где мы делимся полезным опытом, обмениваемся новостями и поддерживаем друг друга на увлекательном пути саморазвития",
+  "community-button": "Хочу к вам!",
+
+  "policy-title": "Политика конфиденциальности"
 }
