fix megre problems, add checkbox, add message translation

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -52,6 +52,7 @@
   "services-li-6": "Нелинейное планирование",
   "services-error-name": "Пожалуйста, введите только буквы и пробелы",
   "services-error-email": "Введите корректный email",
+  "services-error-consent": "Необходимо согласие",
 
   "practice-title": "Кейсы из практики",
 
