--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -55,6 +55,7 @@
   "services-li-6": "Non-linear planning",
   "services-error-name": "Please enter only letters and spaces",
   "services-error-email": "Please enter a valid email",
+  "services-error-consent": "Confirm your consent",
 
   "not-found-title": "There is no such page.",
   "not-found-button": "Go back to the main page",
