add nodemailer settings

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -36,7 +36,7 @@
 
   "services-title": "Чем я могу быть полезен",
   "services-placeholder-name": "Ваше имя",
-  "services-placeholder-email": "Ваш Электронный адрес",
+  "services-placeholder-email": "Ваш электронный адрес",
   "services-placeholder-message": "Введите ваше обращение",
   "services-button": "Отправить",
   "services-policy": "нажимая на кнопку, вы соглашаетесь с ",
