new feature was realized

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -36,6 +36,7 @@
   "about-button-3": "View cases",
 
   "practice-title": "Case studies from practice",
+  "practice-button": "Collapse",
 
   "services-title": "What can I do for you?",
   "services-placeholder-name": "Your name",
@@ -44,15 +45,7 @@
   "services-button": "Send",
   "services-policy": "by clicking on the button, you agree to the ",
   "services-policy-a": "Personal Data Processing Policy",
-  "services-li-1": "Executive Effectiveness ",
-  "services-li-1-1": "HR transformation",
-  "services-li-2": "Team Management ",
-  "services-li-2-1": "HR processes",
-  "services-li-3": "Distributed team",
-  "services-li-4": "Remote work ",
-  "services-li-4-1": "HR metrics",
-  "services-li-5": "Risk management",
-  "services-li-6": "Non-linear planning",
+  "services-button-info": "More details",
   "services-error-name": "Please enter only letters and spaces",
   "services-error-email": "Please enter a valid email",
   "services-error-consent": "Confirm your consent",
