texts was changed

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -14,9 +14,9 @@
   "main-li-5": "Risk management",
   "main-li-6": "Non-linear planning",
 
-  "about-title": "Georgy Lambert",
-  "about-subheading": "Professional mentor for managers and mid-level specialists",
-  "about-description": "It so happened that I got involved in remote work even before the time when the word “remote work” itself became popular, and for several years now I have been creating comfortable conditions for the work of a distributed team and tens of thousands of remote workers",
+  "about-title": "George Lambert",
+  "about-subheading": "Professional mentor for top managers and mid-level specialists",
+  "about-description": "Hi! Welcome to my website of fancy coaching. Here you can find useful information on   professional skills development and platform for networking of like-minded people working remotely",
   "about-sectitle": "Why choose me",
   "about-cards-title-1": "Non-standard approach",
   "about-cards-text-1": "Here we will list all the competitive advantages that distinguish the author from other mentors",
@@ -63,7 +63,7 @@
   "policy-title": "Privacy policy",
   "policy-subtitle": "Personal Data Processing Policy",
   "policy-common-1": "1. General Provisions",
-  "policy-common-1-about": "This personal data processing policy has been drawn up in accordance with the requirements of the Federal Law of July 27, 2006. No. 152-FZ “On Personal Data” (hereinafter referred to as the Law on Personal Data) and determines the procedure for processing personal data and measures to ensure the security of personal data taken by Georgy Andreevich Lambert (hereinafter referred to as the Operator).",
+  "policy-common-1-about": "This personal data processing policy has been drawn up in accordance with the requirements of the Federal Law of July 27, 2006. No. 152-FZ “On Personal Data” (hereinafter referred to as the Law on Personal Data) and determines the procedure for processing personal data and measures to ensure the security of personal data taken by George Andreevich Lambert (hereinafter referred to as the Operator).",
   "policy-common-1-about-1": "1.1 The operator sets as its most important goal and condition for the implementation of its activities the observance of the rights and freedoms of man and citizen when processing his personal data, including the protection of the rights to privacy, personal and family secrets.",
   "policy-common-1-about-2": "1.2. This Operator’s policy regarding the processing of personal data (hereinafter referred to as the Policy) applies to all information that the Operator can obtain about visitors to the website https://remotellamas.com.",
   "policy-common-2": "2. Basic concepts used in the Policy",
