added some styles

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -28,6 +28,7 @@
   "about-cards-text-2-li-4": "Ex Yandex SMM-support & InterCom",
   "about-input-2": "Your email for mailing",
   "about-button-2": "Subscribe",
+  "about-button-4": "See more",
   "about-cards-title-3": "Real results",
   "about-cards-text-3": "I share that:",
   "about-cards-text-3-li-1": "You can work outside the office and stably",
