--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -27,6 +27,7 @@
   "about-cards-text-2-li-4": "Ex Yandex SMM-support & InterCom",
   "about-input-2": "Ваш email для рассылки",
   "about-button-2": "Подписаться",
+  "about-button-4": "Посмотреть подробнее",
   "about-cards-title-3": " Реальные результаты",
   "about-cards-text-3": " Делюсь тем, что:",
   "about-cards-text-3-li-1": "работать вне офиса и стабильно — можно",
