на главной странице добавлено поле для email и кнопка подписаться, дополнены json для перевода текста

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -12,6 +12,8 @@
   "main-li-4": "Удалённая работа",
   "main-li-5": "Управление рисками",
   "main-li-6": "Нелинейное планирование",
+  "main-input": "Оставьте email, если хотите получать полезные материалы",
+  "main-button": "Подписаться",
 
   "about-title": "Георгий Ламберт",
   "about-subheading": "Профессиональный ментор руководителей и специалистов среднего звена",
