texts were changed

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,7 +5,7 @@
   "header-blog": "BLOG",
   "header-community": "COMMUNITY",
 
-  "main-description": "Hi! I am glad to see you on my non-boring coaching website. Here you will find useful information on the development of your professional skills and a platform for like-minded people working remotely.",
+  "main-description": "Hi! Welcome to my website of fancy coaching. Here you can find useful information on professional skills development and platform for networking of like-minded people performing remotely ",
 
   "main-li-1": "Executive effectiveness",
   "main-li-2": "Team Management",
@@ -18,7 +18,7 @@
 
   "about-title": "George Lambert",
   "about-subheading": "Professional mentor for top managers and mid-level specialists",
-  "about-description": "Hi! Welcome to my website of fancy coaching. Here you can find useful information on   professional skills development and platform for networking of like-minded people working remotely",
+  "about-description": "it happened that I got involved in remote work even before the word 'remote' became trendy, and it has been several years now that I create comfortable work environment for distributed teams and thousands of remote employees",
   "about-sectitle": "Why choose me",
   "about-cards-title-1": "Non-standard approach",
   "about-cards-text-1": "Here we will list all the competitive advantages that distinguish the author from other mentors",
@@ -36,7 +36,7 @@
   "about-cards-text-3-li-3": "choosing where, when and how much to work is a thrill",
   "about-button-3": "View cases",
 
-  "practice-title": "Case studies from practice",
+  "practice-title": "Practical cases",
   "practice-button": "Collapse",
 
   "services-title": "What can I do for you?",
@@ -57,7 +57,7 @@
 
   "blog-title": "Blog",
 
-  "community-title": "Llamas at a distance",
+  "community-title": "Remote llamas",
   "community-text": "I invite you to join our cozy community of remote experts and just good people, where we share useful experiences, exchange news and support each other on an exciting path of self-development",
   "community-button": "I want to see you!",
 
