добавлен заголовок в блок подписки

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -13,6 +13,7 @@
   "main-li-4": "Remote work",
   "main-li-5": "Risk management",
   "main-li-6": "Non-linear planning",
+  "main-title-2": "Newsletter subscription",
   "main-input": "Leave your email if you want to receive useful materials",
   "main-button": "Subscribe",
 
