--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -12,6 +12,7 @@
   "main-li-4": "Удалённая работа",
   "main-li-5": "Управление рисками",
   "main-li-6": "Нелинейное планирование",
+  "main-title-2": "Подписка на рассылку",
   "main-input": "Оставьте email, если хотите получать полезные материалы",
   "main-button": "Подписаться",
 
